[package]
name = "graph-physics"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_egui = "0.25.0"
ordered-float = "4.2.0"
rand = "0.8.5"
static_assertions = "1.1.0"

[dependencies.bevy]
version = "0.13.0"
default-features = false
features=[
    "multi-threaded",     # Run with multithreading
    "bevy_asset",         # Assets management
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering
    "default_font",       # Embed a minimal default font for text/UI    
    # File formats:
    "png",    # PNG image format for simple 2D images
    # Platform-specific:
    "webgl2",                # Web: use WebGL2 instead of WebGPU    
    # These are other (non-default) features that may be of interest:
    # (add any of these that you need)  
    # Bevy functionality:
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize",            # Support for `serde` Serialize/Deserialize
    # Platform-specific:
    "bevy_dynamic_plugin",  # (Desktop) support for loading of `DynamicPlugin`s 
    # Development/Debug features:
    "dynamic_linking",   # Dynamic linking for faster compile-times
    
    # Added to avoid duplicate bevy in build folder due to bevy_egui
    "x11",
    "bevy_pbr",
    "tonemapping_luts",
]
